<?xml version="1.0"?>
<package format="2">
  <name>ros_stream_stack</name>
  <version>0.0.0</version>
  <description>The ros_stream_stack package</description>

  <maintainer email="filip.zoric@fer.hr">root</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ros_rtps</build_depend>
  <build_depend>video_stream_opencv</build_depend>
  <exec_depend>ros_rtsp></exec_depend>
  <exec_depend>video_stream_opencv</exec_depend>
  
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <metapackage/>
  </export>
</package>
